# parselabs

./: .claude-sandbox.Dockerfile  .env.backup  .env.example  .env.local.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_REVIEW.md  BEFORE_AFTER_COMPARISON.md  CLAUDE.md  COMPLETE_FIX_SUMMARY.md  EXTRACTION_PIPELINE.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  HARDCODE_REMOVAL_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS2.md  Makefile  README.md  REFACTORING_SUMMARY.md  REQUIREMENTS.md  REVIEW_SYSTEM.md  TEST_RESULTS_FINAL.md  TODO.md  Test_Cohere_Embed_v4.ipynb  activate-env.bat  activate-env.sh  analyze_root_causes.py  analyze_unknown.py  assess_extraction_quality.py  browse.py  build_labs_specs.py  build_labs_specs_2.py  check_hardcodes.md  compare_results.py  compare_results2.py  config.py  deep_search_unknown.py  (+43 more)
.codex/: config.toml
config/: all_lab_names.txt  all_lab_units.txt  all_labs.txt  lab_methods.json  lab_names.json  lab_names_map.json  lab_names_mappings.json  lab_specs copy.json  lab_specs.json  lab_test_standard_units.json  lab_units.json  lab_units_mappings.json  labs.txt
docs/: pipeline.md
image-assets/: manifest.json
labs_parser/: __init__.py  cli.py  config.py  extraction.py  normalization.py  standardization.py  utils.py  validation.py
parselabs/: __init__.py  admin.py  admin_commands.py  app.py  cli.py  config.py  dataset.py  document_reviewer.py  document_store.py  documents.py  exceptions.py  export_schema.py  extraction.py  normalization.py  paths.py  pipeline.py  profiles.py  prompt_templates.py  regression.py  results_view.py  review.py  review_artifacts_backend.py  review_data.py  review_flags.py  review_mcp.py  review_service.py  review_state.py  review_sync.py  row_pipeline.py  rows.py  runtime.py  standardization.py  standardization_refresh.py  store.py  types.py  ui.py  ui_app.py  utils.py  validation.py
profiles/: _template.json  _template.yaml  template.yaml.example
prompts/: conversion_factor_system.md  conversion_factor_user.md  extraction_system.md  extraction_system.txt  extraction_user.md  extraction_user.txt  health_range_system.md  health_range_user.md  name_standardization.md  name_standardization.txt  qualitative_classification.md  self_consistency_system.md  string_parsing.md  string_parsing_system.md  text_extraction_user.md  unit_standardization.txt
review_ui/: __init__.py  app.py  app_streamlit.py  backfill.py  requirements.txt
static/: review_documents.css  review_documents.js  viewer.css  viewer.js
tests/: conftest.py  expected.csv  test_api_validation.py  test_boolean_normalization.py  test_cli.py  test_config.py  test_dataset.py  test_extraction.py  test_import_graph.py  test_lab_specs_schema.py  test_logging.py  test_main_abort.py  test_main_cache.py  test_migrate_raw_columns.py  test_normalization.py  test_paths.py  test_pdf_discovery.py  test_pipeline.py  (+17 more)
(+38 files in other folders)
