[project]
name = "labs-parser"
version = "0.1.0"
description = "Extract structured lab test results from medical documents with AI precision"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "tsilva"}
]
keywords = ["medical", "lab-parser", "ai", "document-processing", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai",
    "pillow",
    "pandas",
    "pdf2image",
    "xlsxwriter",
    "plotly",
    "python-dotenv",
    "pydantic",
    "numpy",
    "tqdm",
    "gradio>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/tsilva/labs-parser"
Repository = "https://github.com/tsilva/labs-parser"
Issues = "https://github.com/tsilva/labs-parser/issues"

[project.scripts]
labs-parser = "labs_parser.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["labs_parser"]

[tool.ruff]
line-length = 230

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
