[project]
name = "parselabs"
dynamic = ["version"]
description = "Extract structured lab test results from medical documents with AI precision"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "tsilva", email = "tsilva@parselabs.dev"}
]
keywords = ["medical", "lab-parser", "ai", "document-processing", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai",
    "pillow",
    "pandas",
    "pdf2image",
    "xlsxwriter",
    "plotly",
    "python-dotenv",
    "pydantic",
    "numpy",
    "tqdm",
    "gradio>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/tsilva/parselabs"
Repository = "https://github.com/tsilva/parselabs"
Issues = "https://github.com/tsilva/parselabs/issues"

[project.scripts]
parselabs = "parselabs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "parselabs/__init__.py"

[tool.ruff]
line-length = 230

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []
